--- a/src/components/hire.module.css
+++ b/src/components/hire.module.css
@@ -5,7 +5,7 @@
   height: 100vh;
   width: 100%;
   background-color: #dfe4f4;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .hireImage {
@@ -38,12 +38,12 @@
     transform: translateX(-17%);
   }
 }
-
+/* 
 @media (min-width: 410px) {
   .hireImage img {
     transform: translateX(-18%);
   }
-}
+} */
 
 @media (min-width: 600px) {
   .hireImage img {
